[package]
name = "cloud-dns"
version = "0.10.0"
authors = [
    "embark-studios",
]
description = "A set client library to interact with Cloud DNS"
readme = "README.md"
repository = "https://github.com/EmbarkStudios/cloud-dns"
edition = "2018"

[dependencies]
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
reqwest = {version = "0.11.6", default-features = false, features = ["json", "rustls-tls"]}
thiserror = "1.0.30"
async-trait = "0.1.50"
url = "2.2.2"
serde_path_to_error = "0.1.4"
tame-oauth = "0.6.0"
http = "0.2.5"

[dev-dependencies]
tokio = { version = "1.12.0", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
